--- a/PAT/BasicLevel/.vscode/settings.json
+++ b/PAT/BasicLevel/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.associations": {
         "deque": "cpp",
         "*.tcc": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "cmath": "cpp",
+        "cstdlib": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
