--- a/PAT/BasicLevel/.vscode/settings.json
+++ b/PAT/BasicLevel/.vscode/settings.json
@@ -4,7 +4,8 @@
         "*.tcc": "cpp",
         "ostream": "cpp",
         "cmath": "cpp",
-        "cstdlib": "cpp"
+        "cstdlib": "cpp",
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
